--- a/src/pages/Home/components/Slide/index.sass
+++ b/src/pages/Home/components/Slide/index.sass
@@ -50,6 +50,6 @@
     @include responsive($screen: large-desktop)
         padding: 0 50px 20px 50px
 
-.selected
+.home .technologies .selected
     border-bottom: 1px solid $yellow
     color: white
